# ChangeLog for perl-core/Compress-Raw-Zlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Zlib/ChangeLog,v 1.3 2009/05/04 14:50:20 tove Exp $

*Compress-Raw-Zlib-2.019 (04 May 2009)

  04 May 2009; Torsten Veller <tove@gentoo.org>
  -Compress-Raw-Zlib-2.017.ebuild, +Compress-Raw-Zlib-2.019.ebuild:
  Version bump

*Compress-Raw-Zlib-2.017 (18 Apr 2009)

  18 Apr 2009; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Zlib-2.017.ebuild:
  Version bump

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Compress-Raw-Zlib-2.005.ebuild, +Compress-Raw-Zlib-2.015.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org>
  -Compress-Raw-Zlib-2.011.ebuild, -Compress-Raw-Zlib-2.012.ebuild:
  Cleanup.

  23 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  ppc stable, bug #192989

  23 Oct 2008; Raúl Porcel <armin76@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  alpha/ia64/x86 stable wrt #192989

  22 Oct 2008; Guy Martin <gmsoft@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  hppa stable, #192989

  21 Oct 2008; Markus Rothe <corsair@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  Stable on ppc64; bug #192989

  21 Oct 2008; Tobias Heinlein <keytoaster@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  amd64 stable, security bug #192989

  20 Oct 2008; Friedrich Oslage <bluebird@gentoo.org>
  Compress-Raw-Zlib-2.015.ebuild:
  Stable on sparc, security bug #192989

*Compress-Raw-Zlib-2.015 (05 Sep 2008)

  05 Sep 2008; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Zlib-2.015.ebuild:
  Version bump

*Compress-Raw-Zlib-2.012 (19 Jul 2008)

  19 Jul 2008; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Zlib-2.012.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  Compress-Raw-Zlib-2.011.ebuild:
  alpha/ia64/sparc/x86 stable

  20 May 2008; Torsten Veller <tove@gentoo.org>