@@ -1,6 +1,8 @@
 DIST Compress-Raw-Zlib-2.015.tar.gz 209006 RMD160 39e04bf22d1fd0d2156971c19d28e5de468cc3cb SHA1 1738184cdfb443addec7560743095ed7bbfb9c3e SHA256 8d75b2abbaca09528ce7e566684253b09a94f3f100947885a54ee22ec7f9d33c
 DIST Compress-Raw-Zlib-2.019.tar.gz 211985 RMD160 a5879a1b0917a690f495349f0d42779c580f0429 SHA1 f14cd28f3a15292217c8e195c4225dac3bef2c53 SHA256 48762c276435fae1d50c6a2c6e2476cdd52f8cb8d7c8a77a8fc1bc70819feb5d
+DIST Compress-Raw-Zlib-2.020.tar.gz 211988 RMD160 05c75250a671a14c1c8f6ea15c08f86a2bb71f8d SHA1 7ecf755d36a765e739401331bbfae22fa2b2fd51 SHA256 8fe24dbd646f6d3d4be25337318d42eba5f5e48dab2f049db916a074c1cc060f
 EBUILD Compress-Raw-Zlib-2.015.ebuild 886 RMD160 74e370a5aad679c162a1c2f01cf79bbb8577cd52 SHA1 af06522447051d88db29d9521af55b42a38ea65c SHA256 093b1fcb496ba7b2f958802eb1ba7690f3ff1fc309dbee1a12b4c14c35b858f6
 EBUILD Compress-Raw-Zlib-2.019.ebuild 873 RMD160 26dd729c8f2ae69aec268d04b3bc8f897b88a787 SHA1 eb1e68f93667fcd30ec8b6999c6976be97a24479 SHA256 493e731b8f37ac3a0b7e35a4ed558620dbdcbaff10319486810628cfce11f147
-MISC ChangeLog 6906 RMD160 45fec3c5dbd3705b00648f6615954ad51a576d07 SHA1 f5ac5da5e4c7a6ef0fd2aa73f2baabd70a03312d SHA256 9b2f02f1922c193ac9326240fdbcb6d0dd6b9bcac19997d2212c2cb9f4d75ffb
+EBUILD Compress-Raw-Zlib-2.020.ebuild 835 RMD160 9aa6ea14619e5ec2524452271b6ab5806d578096 SHA1 5534f45d5dc4a6a3e0f747d63b5afb54c6f0465f SHA256 9249e31b99ccfb6f4e815cffeb513f0fbf87e380a83db1da303a32a8079466a7
+MISC ChangeLog 7045 RMD160 645c0dd64f8355c62e60b7d4b56b74f78cb1fb70 SHA1 2a478bdb8fb1f8800b5e908f98b9e6d29766d58c SHA256 36748b69965a258ac7b8f1fae2da15c4fce8a2f04f90269152297cf716580bbe
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
