@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/Compress-Raw-Zlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Zlib/ChangeLog,v 1.3 2009/05/04 14:50:20 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Zlib/ChangeLog,v 1.4 2009/06/03 22:22:05 tove Exp $
+
+*Compress-Raw-Zlib-2.020 (03 Jun 2009)
+
+  03 Jun 2009; Torsten Veller <tove@gentoo.org>
+  +Compress-Raw-Zlib-2.020.ebuild:
+  Version bump
 
 *Compress-Raw-Zlib-2.019 (04 May 2009)
 
